operations for org. tree page implemented, not tested yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.html
@@ -28,8 +28,9 @@
             <div wicket:id="table"/>
         </div>
 
-        <div style="text-align: center;">
+        <div class="pull-right" style="padding: 0 15px;">
             <a class="btn btn-sm btn-default" wicket:id="cancel"/>
+            <a class="btn btn-sm btn-info" wicket:id="createRoot"/>
         </div>
     </div>
 </wicket:panel>
