--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
@@ -71,6 +71,7 @@ div.assignment-item {
  */
 ul.nav.nav-pills.cog {
   margin: 0px;
+  font-weight: normal; //because of inline menu in th element changes font-weight to bold and dropdown-header doesn't have this...
 }
 
 
