--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -18,12 +18,19 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div wicket:id="confirmDeletePopup" />
     <div wicket:id="movePopup" />
-
+    <!-- todo fix styles for all header with cog, it must be unified somehow !!!! [lazyman] -->
     <div class="row" style="margin-top: 15px;">
         <div class="col-md-4">
-            <div id="treeHeader" class="org-tree-header">
-                <wicket:message key="TreeTablePanel.hierarchy"/>
+            <div wicket:id="treeHeader" class="row" style="margin: 0; border-bottom: 1px solid #ddd;">
+                <div class="col-xs-10" style="padding-left: 5px;">
+                    <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                        <wicket:message key="TreeTablePanel.hierarchy"/>
+                    </div>
+                </div>
+                <div class="col-xs-2 cog" style="padding-right: 5px; margin-top: 2px;" wicket:id="treeMenu"/>
             </div>
+
+
             <div wicket:id="treeContainer" class="org-tree-container">
                 <div wicket:id="tree"/>
             </div>
