--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -135,11 +135,11 @@ span.yui-skin-sam {
   top: 3px;
 }
 
-div.org-tree-header {
-  padding: 8px @padding-small-vertical @padding-small-vertical;
-  font-weight: bold;
-  border-bottom: 1px solid @table-border-color;
-}
+//div.org-tree-header {
+//  padding: 8px @padding-small-vertical @padding-small-vertical;
+//  font-weight: bold;
+//  border-bottom: 1px solid @table-border-color;
+//}
 
 div.org-tree-container {
   overflow-y: auto;
