--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ListMultipleChoicePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ListMultipleChoicePanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <select wicket:id="input"/>
+    <select wicket:id="input" class="form-control input-sm"/>
 </wicket:panel>
 </html>
