--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/MultiValueTextFormGroup.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/MultiValueTextFormGroup.html
@@ -24,7 +24,7 @@
             <input type="text" class="form-control input-sm" wicket:id="text">
             <span class="text-danger" wicket:id="feedback"/>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2" wicket:id="buttonGroup">
             <span class="btn-group">
                 <a class="btn btn-danger btn-sm" wicket:id="remove"><i class="glyphicon glyphicon-minus"/></a>
                 <a class="btn btn-success btn-sm" wicket:id="add"><i class="glyphicon glyphicon-plus"/></a>
