disabled menu items which are not implemented now, updated i18n.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel.html
@@ -21,9 +21,9 @@
         <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#"><span wicket:id="username"/>&nbsp;<b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><div wicket:id="editProfile" /></li>
-                <li><div wicket:id="resetPasswords" /></li>
-                <li class="divider"></li>
+                <!--<li><div wicket:id="editProfile" /></li>-->
+                <!--<li><div wicket:id="resetPasswords" /></li>-->
+                <!--<li class="divider"></li>-->
                 <li><a wicket:id="logoutLink"/></li>
             </ul>
         </li>
