Support for resources in prism schemadoc plugin.

--- a/infra/schema/src/main/schemadoc/templates/object-definition.vm
+++ b/infra/schema/src/main/schemadoc/templates/object-definition.vm
@@ -1,4 +1,4 @@
-#include("header.html")
+#parse("header-inc.vm")
 
 <h1>$definition.TypeName.LocalPart (Object Definition)</h1>
 <p>
@@ -16,4 +16,4 @@
 
 #parse("items-inc.vm")
 
-#include("footer.html")
+#parse("footer-inc.vm")
