--- a/infra/schema/src/main/schemadoc/templates/complex-type-definition.vm
+++ b/infra/schema/src/main/schemadoc/templates/complex-type-definition.vm
@@ -1,4 +1,4 @@
-#include("header.html")
+#parse("header-inc.vm")
 
 <h1>$definition.TypeName.LocalPart (Complex Type)</h1>
 <p>
@@ -22,4 +22,4 @@ $!definition.Documentation
 
 #parse("items-inc.vm")
 
-#include("footer.html")
+#parse("footer-inc.vm")
