--- a/infra/schema/src/main/schemadoc/templates/items-inc.vm
+++ b/infra/schema/src/main/schemadoc/templates/items-inc.vm
@@ -1,3 +1,21 @@
+#*
+ * Copyright (c) 2013 Evolveum
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *#
+
+## Include template that renders a list of items. It is designed to work with any
+## definition that has items (e.g. both PrismObjectDefinition and ComplexTypeDefinition)
 
 <h2>Item Summary</h2>
 
