styles updating for pages everywhere.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/UserBrowserDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/UserBrowserDialog.html
@@ -40,13 +40,13 @@
                         </td>
                     </tr>
                 </table>
-                <a wicket:id="searchButton"/>
+                <a class="btn btn-sm btn-default" wicket:id="searchButton"/>
             </div>
 
             <div wicket:id="table"/>
 
             <p align="right">
-                <a wicket:id="cancelButton"/>
+                <a class="btn btn-sm btn-default"  wicket:id="cancelButton"/>
             </p>
         </form>
     </div>
