--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-login.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-login.less
@@ -1,12 +1,6 @@
-.form-login {
-  border: 1px solid #CCCCCC;
-  border-radius: 4px;
-  display: table;
-  margin: 150px auto auto;
-  padding: 30px;
-  box-shadow: 0 4px 10px -1px rgba(200, 200, 200, 0.7);
-}
-
+/*
+ * fix for language selector on login page
+ */
 div.navbar-collapse {
   .bootstrap-select.btn-group {
       margin: 4px 0 0 0;
