--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/DateInput.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/DateInput.html
@@ -16,10 +16,10 @@
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
   <span style="white-space: nowrap;">
-    <input class="form-control input-sm" type="text" wicket:id="date" size="12" />
-  	<input class="form-control input-sm" type="text" wicket:id="hours" size="2" maxlength="2" />
-   	<span wicket:id="hoursSeparator">&#160;:</span>
-    <input class="form-control input-sm" type="text" wicket:id="minutes" size="2" maxlength="2" />
-    <select class="form-control input-sm" wicket:id="amOrPmChoice"></select>
+    <input class="form-control form-control-sized input-sm" type="text" wicket:id="date" size="12" />
+  	<input class="form-control form-control-sized input-sm" type="text" wicket:id="hours" size="2" maxlength="2" />
+   	<span wicket:id="hoursSeparator">:</span>
+    <input class="form-control form-control-sized input-sm" type="text" wicket:id="minutes" size="2" maxlength="2" />
+    <select class="form-control form-control-sized input-sm" wicket:id="amOrPmChoice"></select>
   </span>
 </wicket:panel>
