--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -132,9 +132,18 @@ div.form-group > div > span.text-danger {
  * fix for yui calendar
  */
 span.yui-skin-sam {
-  position: absolute;
-  right: 24px;
-  top: 3px;
+//  position: absolute;
+//  right: 24px;
+//  top: 3px;
+
+  position: relative;
+  right: 35px;
+  top: -1px;
+}
+
+.form-control-sized {
+  display: inline-block;
+  width: auto;
 }
 
 //div.org-tree-header {
