--- a/infra/schema/src/main/schemadoc/templates/items-inc.vm
+++ b/infra/schema/src/main/schemadoc/templates/items-inc.vm
@@ -17,42 +17,86 @@
 ## Include template that renders a list of items. It is designed to work with any
 ## definition that has items (e.g. both PrismObjectDefinition and ComplexTypeDefinition)
 
-<h2>Item Summary</h2>
+<div class="contentContainer">
+    <table class="overviewSummary" border="0" cellpadding="0" cellspacing="0">
 
-<table border="1">
-    <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Multiplicity</th>
-        <th>Description</th>
-    </tr>
-#foreach($itemDefinition in $definition.getDefinitions())
-  #set( $typeUrl = $path.typeDefinitionUrl($itemDefinition.TypeName,$prefixToBase,$prismContext))
-    <tr>
-        <td><a href="#item-$itemDefinition.Name.LocalPart">$itemDefinition.Name.LocalPart</a></td>
-        <td>
-            $itemDefinition.DocClassName<br/>
-            #if ($typeUrl)
-                <a href="$typeUrl">
+        <caption>
+            <span>Item Summary</span>
+            <span class="tabEnd">&nbsp;</span>
+        </caption>
+
+        <tr>
+            <th class="colFirst" scope="col">Name</th>
+            <th class="colOne" scope="col">Type</th>
+            <th class="colOne" scope="col">Multiplicity</th>
+            <th class="colLast" scope="col">Description</th>
+        </tr>
+
+        <tbody>
+
+            #set($counter = 1)
+            #foreach($itemDefinition in $definition.getDefinitions())
+                #set( $typeUrl = $path.typeDefinitionUrl($itemDefinition.TypeName,$prefixToBase,$prismContext))
+                #set($modulo = $counter % 2)
+
+                #if($modulo == 0)
+                    <tr class="rowColor">
+                        <td class="colFirst"><a href="#item-$itemDefinition.Name.LocalPart">$itemDefinition.Name.LocalPart</a></td>
+                        <td class="colOne">
+                            $itemDefinition.DocClassName<br/>
+                            #if ($typeUrl)
+                                <a href="$typeUrl">
+                            #end
+                                 $itemDefinition.TypeName.LocalPart
+                            #if ($typeUrl)
+                                </a>
+                            #end
+                        </td>
+                        <td class="colOne">$itemDefinition.debugMultiplicity()</td>
+                        <td class="colLast">$!itemDefinition.getDocumentationPreview()&nbsp;</td>
+                    </tr>
+                #else
+                <tr class="altColor">
+                    <td class="colFirst"><a href="#item-$itemDefinition.Name.LocalPart">$itemDefinition.Name.LocalPart</a></td>
+                    <td class="colOne">
+                        $itemDefinition.DocClassName<br/>
+                        #if ($typeUrl)
+                        <a href="$typeUrl">
+                        #end
+                        $itemDefinition.TypeName.LocalPart
+                        #if ($typeUrl)
+                        </a>
+                        #end
+                    </td>
+                    <td class="colOne">$itemDefinition.debugMultiplicity()</td>
+                    <td class="colLast">$!itemDefinition.getDocumentationPreview()&nbsp;</td>
+                </tr>
+                #end
+                #set($counter = $counter + 1)
             #end
-                 $itemDefinition.TypeName.LocalPart
-            #if ($typeUrl)
-                </a>
-            #end
-        </td>
-        <td>$itemDefinition.debugMultiplicity()</td>
-        <td>$!itemDefinition.getDocumentationPreview()</td>
-    </tr>
-#end
-</table>
+        </tbody>
+    </table>
 
-<h2>Items</h2>
+    <div class="details">
+        <ul class="blockList">
+            <li class="blockList"><a name="Items"></a>
 
-#foreach($itemDefinition in $definition.getDefinitions())
-<a id="item-$itemDefinition.Name.LocalPart"><h3>$itemDefinition.Name.LocalPart</h3></a>
-<p>Flags: $!itemDefinition.debugFlags()</p>
-<p>Multiplicity: $itemDefinition.debugMultiplicity()</p>
-<p>
-    $!itemDefinition.getDocumentation()
-</p>
-#end
+                <h3>Items</h3>
+
+                #foreach($itemDefinition in $definition.getDefinitions())
+                <a name="$itemDefinition.Name.LocalPart"></a>
+                <ul class="blockList">
+                    <li class="blockList">
+                        <h4>
+                            <a id="item-$itemDefinition.Name.LocalPart">$itemDefinition.Name.LocalPart</a>
+                        </h4>
+                        <p class="block">Flags: $!itemDefinition.debugFlags()</p>
+                        <p class="block">Multiplicity: $itemDefinition.debugMultiplicity()</p>
+                        <p class="block">$!itemDefinition.getDocumentation()</p>
+                    </li>
+                </ul>
+                #end
+            </li>
+        </ul>
+    </div>
+</div>
