--- a/infra/schema/src/main/schemadoc/templates/object-definition.vm
+++ b/infra/schema/src/main/schemadoc/templates/object-definition.vm
@@ -25,19 +25,22 @@
 
 #parse("header-inc.vm")
 
-<h1>$definition.TypeName.LocalPart (Object Definition)</h1>
-<p>
-    Namespace: $definition.TypeName.NamespaceURI
-</p>
-#if($definition.Abstract)
-<p>
-    ABSTRACT
-</p>
-#end
+<div class="header">
+    <h1>$definition.TypeName.LocalPart (Object Definition)</h1>
+    <h3>Namespace: $definition.TypeName.NamespaceURI</h3>
+</div>
 
-<p>
-    $!definition.Documentation
-</p>
+<div class="contentContainer">
+    #if($definition.Abstract)
+    <div class="block">
+        ABSTRACT
+    </div>
+    #end
+
+    <div class="block">
+        $!definition.Documentation
+    </div>
+</div>
 
 #parse("items-inc.vm")
 
