--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/MultiValueChoosePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/MultiValueChoosePanel.html
@@ -19,6 +19,8 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
+    <div wicket:id="showPopup" />
+
     <label class="control-label" wicket:id="label" />
 
     <wicket:container wicket:id="repeater">
@@ -31,7 +33,7 @@
             <span class="btn-group">
                 <a class="btn btn-danger btn-sm" wicket:id="remove"><i class="glyphicon glyphicon-minus"/></a>
                 <a class="btn btn-success btn-sm" wicket:id="add"><i class="glyphicon glyphicon-plus"/></a>
-                <a class="btn btn-primary btn-xs"><i class="glyphicon glyphicon-pencil"/></a>
+                <a class="btn btn-primary btn-xs" wicket:id="edit"><i class="glyphicon glyphicon-pencil"/></a>
             </span>
         </div>
     </wicket:container>
