new tests - import task from xml, import report from xml, parse csv output

--- a/model/report-impl/src/test/resources/reports/report-test.xml
+++ b/model/report-impl/src/test/resources/reports/report-test.xml
@@ -213,7 +213,7 @@
        </jasperTemplate>
    </reportTemplateStyle>
    <reportOrientation>landscape</reportOrientation>
-   <reportExport>pdf</reportExport>
+   <reportExport>csv</reportExport>
    <query></query>
    <objectClass>UserType</objectClass>
    <reportField>
