refactoring all over the place (gui), removing obsolete code.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.html
@@ -21,6 +21,6 @@
 
     <div wicket:id="tabpanel" class="tabPanel"/>
 
-    <a wicket:id="reload"/>
+    <a class="btn btn-default" wicket:id="reload"/>
 </wicket:panel>
 </html>
