--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypeDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypeDialog.html
@@ -19,7 +19,7 @@
         <div wicket:id="table" />
 
         <p align="right">
-            <a wicket:id="cancelButton"></a>
+            <a class="btn btn-default btn-sm" wicket:id="cancelButton"/>
         </p>
     </div>
 </wicket:panel>
