--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/ConfirmationDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/ConfirmationDialog.html
@@ -20,7 +20,8 @@
 		</p>
 
 		<p align="center">
-			<a wicket:id="yes" /> <a wicket:id="no" />
+            <a class="btn btn-primary btn-sm" wicket:id="yes" />
+            <a class="btn btn-default btn-sm" wicket:id="no" />
 		</p>
 	</div>
 </wicket:panel>
