refactoring all over the place (gui), removing obsolete code, part two.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignablePopupContent.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignablePopupContent.html
@@ -23,7 +23,7 @@
 	       		<div wicket:id="table"/>
 	       	</div>
 	       	<div class="popupButtons">
-	       		<a wicket:id="add" />
+	       		<a class="btn btn-success" wicket:id="add" />
 	       	</div>
 	   	</form>
    	</div>
