--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
@@ -22,7 +22,7 @@
             <div wicket:id="table"/>
         </div>
         <div class="popupButtons">
-            <a wicket:id="add" />
+            <a class="btn btn-success" wicket:id="add" />
         </div>
    	</div>
 </wicket:panel>
