--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/MultiValueChoosePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/MultiValueChoosePanel.html
@@ -25,15 +25,19 @@
 
     <wicket:container wicket:id="repeater">
         <div wicket:id="textWrapper">
-            <input type="text" class="form-control input-sm" wicket:id="text" />
-            <span class="text-danger" wicket:id="feedback" />
+            <div class="input-group input-group-sm">
+                <span class="input-group-btn">
+                    <button wicket:id="edit" class="btn btn-primary" type="button">Edit</button>
+                </span>
+                <input type="text" class="form-control input-sm" wicket:id="text" />
+                <span class="text-danger" wicket:id="feedback" />
+            </div>
         </div>
 
         <div class="col-md-2" wicket:id="buttonGroup">
             <span class="btn-group">
                 <a class="btn btn-danger btn-sm" wicket:id="remove"><i class="glyphicon glyphicon-minus"/></a>
                 <a class="btn btn-success btn-sm" wicket:id="add"><i class="glyphicon glyphicon-plus"/></a>
-                <a class="btn btn-primary btn-xs" wicket:id="edit"><i class="glyphicon glyphicon-pencil"/></a>
             </span>
         </div>
     </wicket:container>
