--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
@@ -18,20 +18,20 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-md-6">
         <h3><wicket:message key="LoggingConfigPanel.loggers"/></h3>
 
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.rootLogger"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.rootLogger"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <select class="form-control input-sm" wicket:id="rootLevel" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.rootAppender"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.rootAppender"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <select class="form-control input-sm" wicket:id="rootAppender" />
             </div>
         </div>
@@ -84,14 +84,14 @@
         </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-md-6">
         <!-- General profiling section -->
         <h3><wicket:message key="LoggingConfigPanel.profiling.general"/></h3>
 
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.requestFilter"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.profiling.requestFilter"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-2">
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" wicket:id="requestFilter">
@@ -101,9 +101,9 @@
         </div>
 
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.performanceStatistics"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.profiling.performanceStatistics"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-2">
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" wicket:id="performanceStatistics">
@@ -113,9 +113,9 @@
         </div>
 
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.dumpInterval"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.profiling.dumpInterval"/></label>
 
-            <div class="col-lg-2">
+            <div class="col-md-3">
                 <input type="text" class="form-control input-sm" wicket:id="dumpInterval"
                        wicket:message="placeholder:LoggingConfigPanel.profiling.dumpInterval.placeholder">
             </div>
@@ -125,11 +125,11 @@
         <h3><wicket:message key="LoggingConfigPanel.profiling.subsystems"/></h3>
 
         <div class="form-group">
-            <div class="col-lg-6">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.model"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.model"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemModel">
@@ -138,9 +138,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.repository"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.repository"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemRepository">
@@ -149,9 +149,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.provisioning"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.provisioning"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemProvisioning">
@@ -160,9 +160,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.ucf"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.ucf"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemUcf">
@@ -172,11 +172,11 @@
                 </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.resourceObjectChangeListener"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.resourceObjectChangeListener"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemResourceObjectChangeListener">
@@ -185,9 +185,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.taskManager"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.taskManager"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemTaskManager">
@@ -196,9 +196,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.workflow"/></label>
+                    <label class="col-md-10 control-label"><wicket:message key="LoggingConfigPanel.profiling.subsystem.workflow"/></label>
 
-                    <div class="col-lg-4">
+                    <div class="col-md-2">
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" wicket:id="subsystemWorkflow">
@@ -213,16 +213,16 @@
         <h3><wicket:message key="LoggingConfigPanel.profiling.entryExit"/></h3>
 
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.subsystem.level"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.subsystem.level"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <select class="form-control input-sm" wicket:id="profilingLevel"/>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-lg-4 control-label"><wicket:message key="LoggingConfigPanel.subsystem.appender"/></label>
+            <label class="col-md-5 control-label"><wicket:message key="LoggingConfigPanel.subsystem.appender"/></label>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <select class="form-control input-sm" wicket:id="profilingAppender"/>
             </div>
         </div>
@@ -231,7 +231,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
         <h3><wicket:message key="LoggingConfigPanel.appenders"/></h3>
         <table class="table table-striped">
             <thead>
