Report UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/DoubleButtonPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/DoubleButtonPanel.html
@@ -13,10 +13,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
-<wicket:panel>
-    <a class="btn btn-primary btn-sm" wicket:id="button" />
-</wicket:panel>
+    <wicket:panel>
+        <a wicket:id="first" />
+        <a wicket:id="second" />
+    </wicket:panel>
 </html>
