--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -22,6 +22,13 @@
 
         <table class="table table-condensed table-striped">
             <tr>
+                <td><wicket:message key="AuditPopupPanel.descriptionPlaceholder" /></td>
+                <td>
+                    <input class="form-control input-sm"
+                           wicket:message="placeholder:AuditPopupPanel.descriptionPlaceholder" />
+                </td>
+            </tr>
+            <tr>
                 <td><wicket:message key="AuditPopupPanel.dateFrom"/></td>
                 <td><span wicket:id="dateFrom"/></td>
             </tr>
