--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
@@ -18,7 +18,15 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <form wicket:id="form">
+
         <table class="table table-condensed table-striped">
+            <tr>
+                <td><wicket:message key="ReconciliationPopupPanel.descriptionPlaceholder" /></td>
+                <td>
+                    <input class="form-control input-sm"
+                           wicket:message="placeholder:ReconciliationPopupPanel.descriptionPlaceholder" />
+                </td>
+            </tr>
             <tr>
                 <td><wicket:message key="ReconciliationPopupPanel.resource"/></td>
                 <td><select class="form-control input-sm" wicket:id="resource"/></td>
